Fix left spacing issues for desktop header and footer on promote page by making petition css more specific

--- a/pegasus/sites.v3/code.org/public/css/mobile-footer.css
+++ b/pegasus/sites.v3/code.org/public/css/mobile-footer.css
@@ -110,7 +110,7 @@
   #pagefooter {
     overflow: visible;
     padding: 0;
-    height: 160px;
+    height: 180px;
   }
 
   #footer-links {
