--- a/pegasus/sites.v3/code.org/public/css/petition.css
+++ b/pegasus/sites.v3/code.org/public/css/petition.css
@@ -4,7 +4,7 @@
   font-family: 'Gotham 5r', sans-serif;
 }
 
-.desktop-feature {
+#petition_form .desktop-feature {
   font-size: 12px;
   line-height: 18px;
   color: #dcdcdc;
