--- a/pegasus/sites.v3/code.org/public/css/promote.css
+++ b/pegasus/sites.v3/code.org/public/css/promote.css
@@ -1,4 +1,4 @@
-#promote-page h1 {
+h1 {
   margin-bottom: 15px;
 }
 
